# autobisect

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .taskcluster.yml  .travis.yml  CHANGELOG.md  README.md  autobisect.py  codecov.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
autobisect/: __init__.py  __main__.py  args.py  autobisect.py  bisect.py  build_manager.py  builds.py  config.py  main.py
autobisect-js/: findCsetsIntersection.py  knownBrokenEarliestWorking.py
autobisect/browser/: evaluator.py
autobisect/core/: bisect.py  build_manager.py
autobisect/evaluator/: __init__.py  browser.py  js.py
autobisect/evaluator/browser/: __init__.py  args.py  browser.py
autobisect/evaluator/browser/tests/: test_browser.py
autobisect/evaluator/js/: __init__.py  args.py
autobisect/evaluator/tests/: test_browser.py
autobisect/evaluators/: __init__.py  base.py
autobisect/evaluators/browser/: args.py  browser.py
autobisect/evaluators/browser/tests/: test_browser.py
autobisect/evaluators/js/: __init__.py  args.py  js.py
autobisect/evaluators/js/tests/: test_js.py
autobisect/tests/: conftest.py  fetcher_callback.py  test_bisect.py  test_build_manager.py  test_builds.py  test_config.py
autobisect/tests/mock-firefoxci/api/index/v1/namespaces/: gecko.v2.mozilla-central.pushdate.2019.12.31  gecko.v2.mozilla-central.pushdate.2020.01.01
autobisect/tests/mock-firefoxci/api/index/v1/task/: gecko.v2.autoland.revision.155e5d7c120c3e7b48685d24816bd92908014613.firefox.linux64-opt  gecko.v2.autoland.revision.3c2625208e78720b39f2400f8e52820c1af9f507.firefox.linux64-opt  gecko.v2.autoland.revision.42a4d256fbaa5b2dfccdc80e49f8862f5eeff8c8.firefox.linux64-opt  gecko.v2.autoland.revision.7e9830f213c8606a30d7c4f6cdc248e1e1041a39.firefox.linux64-opt  gecko.v2.autoland.revision.9900a5f694580852cc09cfd516055a6337a25acc.firefox.linux64-opt  gecko.v2.autoland.revision.a1266665b89b04eaa8c146d0bc91b512945423cb.firefox.linux64-opt  gecko.v2.autoland.revision.d9b16aa53c9caa4fbb3d6f9db0e375c34af212ea.firefox.linux64-opt  gecko.v2.mozilla-central.latest.firefox.linux64-opt  gecko.v2.mozilla-central.pushdate.2019.12.31.20191231094349.firefox.linux64-opt  gecko.v2.mozilla-central.pushdate.2019.12.31.20191231213920.firefox.linux64-opt  gecko.v2.mozilla-central.pushdate.2019.12.31.latest.firefox.linux64-opt  gecko.v2.mozilla-central.pushdate.2020.01.01.20200101092938.firefox.linux64-opt  gecko.v2.mozilla-central.pushdate.2020.01.01.20200101110108.firefox.linux64-opt  gecko.v2.mozilla-central.pushdate.2020.01.01.20200101214819.firefox.linux64-opt  gecko.v2.mozilla-central.pushdate.2020.01.01.latest.firefox.linux64-opt  gecko.v2.mozilla-central.revision.03ed5ed6cba7190608c548578e9d79d82b0ccf83.firefox.linux64-opt  gecko.v2.mozilla-central.shippable.latest.firefox.win64-opt
autobisect/tests/mock-firefoxci/api/queue/v1/task/DYaFBxzITgCwBUp48Bugtw/artifacts/: .get
autobisect/tests/mock-hg/mozilla-central/: json-pushes?fromchange=03ed5ed6cba7190608c548578e9d79d82b0ccf83&tochange=66a1c07a8f48c5129aa3867813bacb6e7ef22d8c  json-pushes?fromchange=385f49adaf00&tochange=590613078c74
autobisect/tests/mock-index/v1/namespaces/: gecko.v2.mozilla-central.pushdate.2019.03.29  gecko.v2.mozilla-central.pushdate.2019.05.06  gecko.v2.mozilla-central.pushdate.2019.05.07  gecko.v2.mozilla-central.pushdate.2019.05.08
autobisect/tests/mock-index/v1/task/: gecko.v2.mozilla-central.pushdate.2019.05.08.20190508214924.firefox.linux64-opt
autobisect/tests/mock-queue/v1/task/ctt5UMcsQ9OsQxY1TPrObA/artifacts/: .get
browser/: evaluator.py
browser/mozconfigs/: linux.asan  linux.asan.debug  mozconfig.common
config/: config.py
config/mozconfigs/: mozconfig.asan-macos-cross-debug  mozconfig.asan-macos-cross-release  mozconfig.asan.base  mozconfig.fuzzing.common  mozconfig.macosx-cross  mozconfig.mi-asan-debug  mozconfig.mi-asan-release
core/: bisect.py  boundary.py  build_manager.py  builds.py  config.py
js/: buildOptions.py  compareJIT.py  compileShell.py  inspectShell.py  jsInteresting.py  loopjsfunfuzz.py  pinpoint.py  shellFlags.py
src/autobisect/: __init__.py  __main__.py  args.py  bisect.py  build_manager.py  builds.py  config.py  main.py
src/autobisect/evaluators/: __init__.py  base.py
src/autobisect/evaluators/browser/: args.py  browser.py
src/autobisect/evaluators/browser/tests/: test_browser.py
src/autobisect/evaluators/js/: __init__.py  args.py  js.py
src/autobisect/tests/: test_build_manager.py  test_builds.py  test_main.py
tests/: conftest.py  test_bisect.py  test_build_manager.py  test_builds.py  test_config.py  test_main.py
tests/cassettes/test_bisect/: test_bisect_get_pushdate_builds_simple.yaml  test_get_autoland_range_invalid_revs.yaml  test_get_autoland_range_simple.yaml
tests/cassettes/test_build_manager/: test_build_manager_get_build.yaml  test_build_manager_get_build[Linux].yaml  test_build_manager_get_build[Windows].yaml
tests/data/mock-firefoxci/api/index/v1/task/: gecko.v2.autoland.revision.008852b3720d717dbb5c2c3268837e003baf72cf.firefox.linux64-opt  gecko.v2.autoland.revision.2ad74aa6c596c2584a31dd3e502c91a2c200c23f.firefox.linux64-opt  gecko.v2.autoland.revision.66a1c07a8f48c5129aa3867813bacb6e7ef22d8c.firefox.linux64-opt  gecko.v2.autoland.revision.67c8a4956e065a37ea85a504927e0e2037a7a454.firefox.linux64-opt  gecko.v2.autoland.revision.963bed108e6206bf23b4d27d5bd029b1a6160c81.firefox.linux64-opt  gecko.v2.autoland.revision.d33c1e0b18ab78924d4d74cf4fd72459faafb6d3.firefox.linux64-opt  gecko.v2.autoland.revision.f6cf3ca2de50275ee4c885d85ae49a5e82419370.firefox.linux64-opt  gecko.v2.mozilla-central.shippable.latest.firefox.linux64-opt
tests/evaluators/browser/: test_browser.py
tests/evaluators/js/: test_js.py
tests/evaluators/js/cassettes/test_js/: test_js_evaluator_get_valid_flags.yaml  test_js_evaluator_get_valid_flags_bad_rev.yaml
util/: crashesat.py  createCollector.py  downloadBuild.py  fetch.py  fileManipulation.py  forkJoin.py  hgCmds.py  lithOps.py  reposUpdate.py  s3cache.py  subprocesses.py
(+40 files in other folders)
