[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.5"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]

[tool.coverage.run]
omit = [
    "*/setup.py",
    "*/tests/*",
    "*/build/*",
    "*/dist/*",
    "*/.tox/*",
    "*/.egg/*",
]

[tool.isort]
force_sort_within_sections = false
known_first_party = "autobisect"
profile = "black"

[tool.mypy]
exclude = "^.*tests.*$"
ignore_missing_imports = "True"
implicit_reexport = "True"
strict = "True"

[tool.poetry]
authors = [
    "Jason Kratzer <jkratzer@mozilla.com>"
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Automatic bisection utility for Mozilla Firefox and SpiderMonkey"
homepage = "https://github.com/MozillaSecurity/autobisect"
include = ["tests/**"]
keywords = ["fuzz", "fuzzing", "security", "test", "testing", "bisection"]
license = "MPL-2.0"
maintainers = [
    "Mozilla Fuzzing Team <fuzzing@mozilla.com>"
]
name = "autobisect"
readme = "README.md"
repository = "https://github.com/MozillaSecurity/autobisect"
version = "7.0.1"

[tool.poetry.dependencies]
fuzzfetch = "^2.0.0"
grizzly-framework = "^0.16.5"
lithium-reducer = "^0.6.2"
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
coverage = {extras = ["toml"], version = "^7.2.3"}
flake8 = "^3.7.9"
flake8-isort = "^4.0.0"
flake8-quotes = "^2.1.1"
freezegun = "^0.3.15"
gitlint = "^0.17.0"
mypy = "^0.931"
pre-commit = "^2.13.0"
pylint = "^2.4.4"
pytest = "^7.1.3"
pytest-black = "^0.3.8"
pytest-cov = "^2.8.1"
pytest-flake8 = "^1.0.4"
pytest-mock = "^3.0.0"
pytest-pylint = "^0.17.0"
requests_mock = "^1.8.0"
taskcluster-yml-validator = "^0.0.9"
toml-sort = "^0.19.0"
tox = "^3.14.5"
types-freezegun = "^0.1.4"
types-pytz = "^2021.1.0"
types-requests = "^2.25.0"
types-six = "^0.1.7"

[tool.poetry.scripts]
autobisect = "autobisect.main:main"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
    "bad-continuation",
    "fixme",
    "invalid-name",
    "line-too-long",
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "missing-module-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-nested-blocks",
    "too-many-return-statements",
    "too-many-statements",
    "useless-object-inheritance"
]

[tool.pytest.ini_options]
log_level = "DEBUG"

[tool.semantic_release]
build_command = "pip install poetry && poetry build"
commit_subject = "chore(release): {version} [skip ci]"
upload_to_pypi = true
upload_to_release = false
version_toml = "pyproject.toml:tool.poetry.version"
