[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=1.0.5"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover"
]

[tool.coverage.run]
omit = [
  "*/.egg/*",
  "*/.tox/*",
  "*/build/*",
  "*/dist/*",
  "*/setup.py",
  "*/tests/*"
]

[tool.isort]
force_sort_within_sections = false
known_first_party = "autobisect"
profile = "black"

[tool.mypy]
exclude = "^.*tests.*$"
ignore_missing_imports = "True"
implicit_reexport = "True"
strict = "True"

[tool.poetry]
authors = [
  "Jason Kratzer <jkratzer@mozilla.com>"
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Testing"
]
description = "Automatic bisection utility for Mozilla Firefox and SpiderMonkey"
homepage = "https://github.com/MozillaSecurity/autobisect"
include = ["tests/**"]
keywords = ["bisection", "fuzz", "fuzzing", "security", "test", "testing"]
license = "MPL-2.0"
maintainers = [
  "Mozilla Fuzzing Team <fuzzing@mozilla.com>"
]
name = "autobisect"
packages = [{from = "src", include = "autobisect"}]
readme = "README.md"
repository = "https://github.com/MozillaSecurity/autobisect"
version = "8.6.0"

[tool.poetry.dependencies]
fuzzfetch = "^11.0.0"
grizzly-framework = "^0.23.0"
lithium-reducer = "^4.0.0"
platformdirs = "^4.2.2"
python = "^3.9"
twine = "^6.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
codecov-cli = "^11.0.3"
coverage = {extras = ["toml"], version = "^7.9.1"}
flake8 = "^7.1.1"
flake8-isort = "^6.0.0"
flake8-quotes = "^3.3.2"
freezegun = "^1.5.1"
gitlint = "^0.19.1"
mypy = "^1.13.0"
pre-commit = "^4.0.1"
pylint = "^3.3.5"
pytest = "^8.3.4"
pytest-black = "^0.6.0"
pytest-cov = "^6.0.0"
pytest-freezer = "^0.4.8"
pytest-mock = "^3.0.0"
pytest-pylint = "^0.21.0"
pytest-recording = "^0.13.2"
python-semantic-release = "^10.1.0"
toml-sort = "^0.24.2"
tox = "^4.24.2"
types-freezegun = "^1.1.10"
types-pytz = "^2025.1.0.20250204"
types-requests = "^2.32.0.20250306"
types-six = "^1.17.0.20250304"

[tool.poetry.scripts]
autobisect = "autobisect.main:main"

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
  "fixme",
  "invalid-name",
  "line-too-long",
  "logging-format-interpolation",
  "logging-fstring-interpolation",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-statements",
  "useless-object-inheritance"
]

[tool.pytest.ini_options]
log_level = "DEBUG"

[tool.semantic_release]
build_command = "poetry build"
commit_message = "chore(release): {version} [skip ci]"
version_toml = [
  "pyproject.toml:tool.poetry.version"
]
