[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "autobisect"
version = "9.2.0"
description = "Automatic bisection utility for Mozilla Firefox and SpiderMonkey"
readme = "README.md"
keywords = [ "bisection", "fuzz", "fuzzing", "security", "test", "testing" ]
license = "MPL-2.0"
maintainers = [ { email = "fuzzing@mozilla.com", name = "Mozilla Fuzzing Team" } ]
authors = [ { email = "jkratzer@mozilla.com", name = "Jason Kratzer" } ]
requires-python = ">=3.10,<4.0"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "fuzzfetch>=16.1,<17",
  "grizzly-framework==0.24.2",
  "lithium-reducer>=4,<5",
  "platformdirs>=4.2.2,<5",
]
urls.Homepage = "https://github.com/MozillaSecurity/autobisect"
urls.Repository = "https://github.com/MozillaSecurity/autobisect"
scripts = { autobisect = "autobisect.main:main" }

[dependency-groups]
dev = [
  "black>=25.1",
  "codecov-cli>=11.0.3",
  "coverage[toml]>=7.9.1",
  "flake8>=7.1.1",
  "flake8-isort>=6",
  "flake8-quotes>=3.3.2",
  "freezegun>=1.5.1",
  "mypy>=1.13",
  "pre-commit>=4.0.1",
  "pylint>=4.0.4",
  "pyproject-fmt>=2",
  "pytest>=9.0.2",
  "pytest-black>=0.6",
  "pytest-cov>=7",
  "pytest-freezer>=0.4.8",
  "pytest-mock>=3",
  "pytest-pylint>=0.21",
  "pytest-recording>=0.13.2",
  "python-semantic-release>=10.1",
  "twine>=6.1,<7",
  "types-freezegun>=1.1.10",
  "types-pytz>=2025.1.0.20250204",
  "types-requests>=2.32.0.20250306",
  "types-six>=1.17.0.20250304"
]

[tool.hatch]
build.targets.sdist.include = [ "/src", "/tests" ]
build.targets.wheel.packages = [ "src/autobisect" ]

[tool.isort]
force_sort_within_sections = false
known_first_party = "autobisect"
profile = "black"

[tool.pylint]
format.max-line-length = 88
messages_control.disable = [
  "fixme",
  "invalid-name",
  "line-too-long",
  "logging-format-interpolation",
  "logging-fstring-interpolation",
  "missing-module-docstring",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-positional-arguments",
  "too-many-return-statements",
  "too-many-statements",
  "useless-object-inheritance"
]

[tool.pytest]
ini_options.log_level = "DEBUG"

[tool.coverage]
run.omit = [ "*/.egg/*", "*/build/*", "*/dist/*", "*/setup.py", "*/tests/*" ]
run.source_pkgs = [ "autobisect" ]
report.exclude_lines = [ "pragma: no cover" ]

[tool.mypy]
exclude = "^.*tests.*$"
ignore_missing_imports = "True"
implicit_reexport = "True"
strict = "True"

[tool.semantic_release]
build_command = "uv build"
commit_message = "chore(release): {version} [skip ci]"
version_toml = [ "pyproject.toml:project.version" ]
